Modify flex properties to fix hero wrap issue.
Also add flex to middle area of page.

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
     align-items: center;
     justify-content: space-between;
     background-color: #1F2937;
-    flex-wrap: wrap;
     padding: 0 75px;
 }
 
@@ -32,6 +31,9 @@ a {
 .hero {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    background-color: #1F2937;
+    padding: 0 75px;
 }
 
 .hero-text {
@@ -66,5 +68,10 @@ a {
     background-color: #3882F6;
     color: white;
     border-radius: 10px;
-    padding: 7px 20px
+    padding: 7px 20px;
+    border-color: #3882F6;
+}
+
+.quote {
+    display: flex;
 }
